--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <meta name="format-detection" content="telephone=no" />
     <meta name="msapplication-tap-highlight" content="no" />
 
+    <link rel="stylesheet" href="/src/theme/index.css">
     <link rel="shortcut icon" type="image/png" href="/favicon.png" />
 
     <!-- add to homescreen for ios -->
