--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>YoCrew Organization</title>
 
     <base href="/" />
-
+    <meta name="description" content="Sme ešportová organizácia, ktorá organizuje turnaje v rôzných hrach,..." />
     <meta name="color-scheme" content="dark" />
     <meta
       name="viewport"
