--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-title" content="YoCrew" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <!-- TWITCH -->
+    <script src="https://embed.twitch.tv/embed/v1.js"></script>
   </head>
 
   <body>
